# exemplo

./: .pylintrc  Makefile  README.md  pyproject.toml
src/ambiente/: app.py
tests/: test_app.py
